@@ -5827,7 +5827,6 @@ process sentinels.  They shall not disturb each other."
   ;; we mark it as unstable.
   :tags '(:expensive-test :unstable)
   (skip-unless (tramp--test-enabled))
-  (skip-unless nil)
   ;; Prior Emacs 27, `shell-file-name' was hard coded as "/bin/sh" for
   ;; remote processes in Emacs.  That doesn't work for tramp-adb.el.
   (skip-unless (or (and (tramp--test-adb-p) (tramp--test-emacs27-p))
@@ -6017,116 +6016,8 @@ process sentinels.  They shall not disturb each other."
         (ignore-errors (cancel-timer timer))
         (ignore-errors (delete-directory tmp-name 'recursive))))))
 
-(ert-deftest tramp-test44-threads ()
-  "Check that Tramp cooperates with threads."
-  (skip-unless (tramp--test-enabled))
-  (skip-unless (featurep 'threads))
-  (skip-unless (= (length (with-no-warnings (all-threads))) 1))
-  (skip-unless (not (with-no-warnings (thread-last-error))))
-  ;; We need the thread features introduced in Emacs 27.
-  (skip-unless (bound-and-true-p main-thread))
-  ;; For the time being it works only in the feature branch.
-  (skip-unless
-   (string-equal
-    (bound-and-true-p emacs-repository-branch) "feature/tramp-thread-safe"))
-
-  (tramp--test-instrument-test-case 0
-  (with-no-warnings
-    (with-timeout (60 (tramp--test-timeout-handler))
-      ;; We cannot bind the variables dynamically; they are used in the threads.
-      (defvar tmp-name1 (tramp--test-make-temp-name))
-      (defvar tmp-name2 (tramp--test-make-temp-name))
-      (defvar tmp-mutex (make-mutex "mutex"))
-      (defvar tmp-condvar1 (make-condition-variable tmp-mutex "condvar1"))
-      (defvar tmp-condvar2 (make-condition-variable tmp-mutex "condvar2"))
-
-      ;; Rename simple file.
-      (unwind-protect
-	  (let (tmp-thread1 tmp-thread2)
-	    (write-region "foo" nil tmp-name1)
-	    (should (file-exists-p tmp-name1))
-	    (should-not (file-exists-p tmp-name2))
-
-	    (should (mutexp tmp-mutex))
-	    (should (condition-variable-p tmp-condvar1))
-	    (should (condition-variable-p tmp-condvar2))
-
-	    ;; This thread renames `tmp-name1' to `tmp-name2' twice.
-	    (setq
-	     tmp-thread1
-	     (make-thread
-	      (lambda ()
-		;; Rename first time.
-		(rename-file tmp-name1 tmp-name2)
-		;; Notify thread2.
-		(with-mutex (condition-mutex tmp-condvar2)
-		  (condition-notify tmp-condvar2 t))
-		;; Rename second time, once we've got notification from thread2.
-		(with-mutex (condition-mutex tmp-condvar1)
-		  (condition-wait tmp-condvar1))
-		(rename-file tmp-name1 tmp-name2))
-	      "thread1"))
-
-	    (should (threadp tmp-thread1))
-	    (should (thread-live-p tmp-thread1))
-
-	    ;; This thread renames `tmp-name2' to `tmp-name1' twice.
-	    (setq
-	     tmp-thread2
-	     (make-thread
-	      (lambda ()
-		;; Rename first time, once we've got notification from thread1.
-		(with-mutex (condition-mutex tmp-condvar2)
-		  (condition-wait tmp-condvar2))
-		(rename-file tmp-name2 tmp-name1)
-		;; Notify thread1.
-		(with-mutex (condition-mutex tmp-condvar1)
-		  (condition-notify tmp-condvar1 t))
-		;; Rename second time, once we've got notification from
-		;; the main thread.
-		(with-mutex (condition-mutex tmp-condvar2)
-		  (condition-wait tmp-condvar2))
-		(rename-file tmp-name2 tmp-name1))
-	      "thread2"))
-
-	    (should (threadp tmp-thread2))
-	    (should (thread-live-p tmp-thread2))
-	    (should (= (length (all-threads)) 3))
-
-	    ;; Wait for thread1.
-	    (thread-join tmp-thread1)
-	    ;; Checks.
-	    (should-not (thread-live-p tmp-thread1))
-	    (should (= (length (all-threads)) 2))
-	    (should-not (thread-last-error))
-	    (should (file-exists-p tmp-name2))
-	    (should-not (file-exists-p tmp-name1))
-
-	    ;; Notify thread2.
-	    (with-mutex (condition-mutex tmp-condvar2)
-	      (condition-notify tmp-condvar2 t))
-
-	    ;; Wait for thread2.
-	    (thread-join tmp-thread2)
-	    ;; Checks.
-	    (should-not (thread-live-p tmp-thread2))
-	    (should (= (length (all-threads)) 1))
-	    (should-not (thread-last-error))
-	    (should (file-exists-p tmp-name1))
-	    (should-not (file-exists-p tmp-name2)))
-
-	;; Cleanup.
-	(ignore-errors (delete-file tmp-name1))
-	(ignore-errors (delete-file tmp-name2))
-	;; We could have spurious threads still running; wait for them to die.
-	(while (cdr (all-threads))
-	  (thread-signal (cadr (all-threads)) 'error nil)
-	  (thread-yield))
-	;; Cleanup errors.
-	(ignore-errors (thread-last-error 'cleanup)))))))
-
 ;; This test is inspired by Bug#29163.
-(ert-deftest tramp-test45-auto-load ()
+(ert-deftest tramp-test44-auto-load ()
   "Check that Tramp autoloads properly."
   ;; If we use another syntax but `default', Tramp is already loaded
   ;; due to the `tramp-change-syntax' call.
@@ -6151,7 +6042,7 @@ process sentinels.  They shall not disturb each other."
 	(mapconcat #'shell-quote-argument load-path " -L ")
 	(shell-quote-argument code)))))))
 
-(ert-deftest tramp-test45-delay-load ()
+(ert-deftest tramp-test44-delay-load ()
   "Check that Tramp is loaded lazily, only when needed."
   ;; The autoloaded Tramp objects are different since Emacs 26.1.  We
   ;; cannot test older Emacsen, therefore.
@@ -6184,7 +6075,7 @@ process sentinels.  They shall not disturb each other."
 	  (mapconcat #'shell-quote-argument load-path " -L ")
 	  (shell-quote-argument (format code tm)))))))))
 
-(ert-deftest tramp-test45-recursive-load ()
+(ert-deftest tramp-test44-recursive-load ()
   "Check that Tramp does not fail due to recursive load."
   (skip-unless (tramp--test-enabled))
 
@@ -6208,7 +6099,7 @@ process sentinels.  They shall not disturb each other."
 	  (mapconcat #'shell-quote-argument load-path " -L ")
 	  (shell-quote-argument code))))))))
 
-(ert-deftest tramp-test45-remote-load-path ()
+(ert-deftest tramp-test44-remote-load-path ()
   "Check that Tramp autoloads its packages with remote `load-path'."
   ;; The autoloaded Tramp objects are different since Emacs 26.1.  We
   ;; cannot test older Emacsen, therefore.
@@ -6237,7 +6128,7 @@ process sentinels.  They shall not disturb each other."
 	(mapconcat #'shell-quote-argument load-path " -L ")
 	(shell-quote-argument code)))))))
 
-(ert-deftest tramp-test46-unload ()
+(ert-deftest tramp-test45-unload ()
   "Check that Tramp and its subpackages unload completely.
 Since it unloads Tramp, it shall be the last test to run."
   :tags '(:expensive-test)
@@ -6321,7 +6212,6 @@ If INTERACTIVE is non-nil, the tests are run interactively."
 ;; * Implement `tramp-test31-interrupt-process' for `adb'.  Fix `:unstable'.
 ;; * Fix Bug#16928 in `tramp-test43-asynchronous-requests'.  A remote
 ;;   file name operation cannot run in the timer.  Remove `:unstable' tag?
-;; * Fix `tramp-test44-threads'.
 
 (provide 'tramp-tests)
 ;;; tramp-tests.el ends here
